--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "dependencies": {
     "express": "4.x",
+    "express-xml-parser": "^1.0.0",
+    "nodejs-wechat": "0.0.8",
     "url": "^0.11.0",
     "weixin-apis": "^1.9.0"
   }
