--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "express-xml-parser": "^1.0.0",
     "nodejs-wechat": "0.0.8",
     "url": "^0.11.0",
+    "wechat-mp": "^0.2.6",
     "weixin-api": "^0.1.7",
     "weixin-apis": "^1.9.0"
   }
