--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "WeChatDemo",
   "version": "1.0.0",
   "dependencies": {
-    "cookie-session": "^2.0.0-alpha.1",
+    "cookie-parser": "^1.4.1",
     "debug": "^2.2.0",
     "express": "^4.13.4",
     "express-middlewares-js": "^1.0.3",
+    "express-session": "^1.13.0",
     "express-xml-parser": "^1.0.0",
     "jQuery": "^1.7.4",
     "jquery": "^1.9.1",
